Atualização das seções Sobre e Experiências

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>Mais de 10 anos de experiência em desenvolvimento de aplicações Web utilizando Java, JSF, PrimeFaces, Hibernate, JPA, iReport, dentre outros, e em gerenciamento de banco de dados PostgreSql. Participou do início do desenvolvimento do sistema próprio do Conselho Regional de Engenharia e Agronomia do Estado do Piauí, em 2009, permanecendo na equipe até o momento, fazendo manutenções e desenvolvendo novas funcionalidades.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -82,15 +82,17 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Conselho Regional de Engenharia e Agronomia do Piauí - CREA/PI</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Outubro 2008 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>Analista de Sistemas</p>
+              <p>Desenvolvimento de Sistema Web em Java, utilizando os frameworks JSF, PrimeFaces, Hibernate, JPA, iReport, dentre outros; Desenvolvimento de API em PHP para acesso a dados por Aplicativos; Gerenciamento de banco de dados Postgresql.</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Conselho Regional de Engenharia e Agronomia do Piauí - CREA/PI</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2018 - Junho 2021</h6>
+              <p>Gerente da Divisão de Informática</p>
+              <p>Planejamento, coordenação, execução e controle das atividades de informática e processamento de dados do Conselho.</p>
             </div>
           </div>
   
