Preenchimento da Seção "Educação"

--- a/index.html
+++ b/index.html
@@ -109,16 +109,20 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/ACB3AB27/share" target="_blank">Domine o Estilo Arquitetural REST com o Spring Web</a></li>
+                <li><a href="https://www.dio.me/certificate/D4B0BAC1/share" target="_blank">Curso: Introdução ao Spring Framework (3hs)</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Instituto Federal do Piauí - IFPI</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro 2005 - Dezembro 2007</h6>
+              <p>Pós-graduação Lato Sensu - Especialização em Banco de Dados</p>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Universidade Estadual do Piauí - UESPI</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1999 - 2004</h6>
+              <p>Bacharelado em Ciência da Computação</p>
             </div>
           </div>
 
