--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
-                Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
-                A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
-                de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
+                A DIO possui parcerias com algumas empresas inovadoras no mundo, proporcionando experiências de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
                 <li><a href="https://www.dio.me/certificate/ACB3AB27/share" target="_blank">Domine o Estilo Arquitetural REST com o Spring Web</a></li>
