--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 A DIO possui parcerias com algumas empresas inovadoras no mundo, proporcionando experiências de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/ACB3AB27/share" target="_blank">Domine o Estilo Arquitetural REST com o Spring Web</a></li>
+                <li><a href="https://www.dio.me/certificate/ACB3AB27/share" target="_blank">Domine o Estilo Arquitetural REST com o Spring Web (3h)</a></li>
                 <li><a href="https://www.dio.me/certificate/D4B0BAC1/share" target="_blank">Curso: Introdução ao Spring Framework (3hs)</a></li>
               </ul>
               <hr>
