--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/thaizepaulo/dio-desafio-projetos-primeiro-repositorio" target="_blank">thaizepaulo/dio-desafio-projetos-primeiro-repositorio</a>
               </h6>
-              <p>Projego para o desafio DIO "Criando seu Primeiro Repositório no GitHub Para Compartilhar Seu Progresso"</p>
+              <p>Repositório para o desafio DIO "Criando seu Primeiro Repositório no GitHub Para Compartilhar Seu Progresso"</p>
               <hr>
             </div>
           </div>
