Alteração da paleta de cores (de teal para blue)

--- a/index.html
+++ b/index.html
@@ -36,31 +36,31 @@
               <h2>THAIZE PAULO DE SOUSA SOARES</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Analista de Sistemas</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Parnaíba/PI, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>thaizepaulo@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(86) XXXXX-XXXX</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Analista de Sistemas</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Parnaíba/PI, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>thaizepaulo@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>(86) XXXXX-XXXX</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue"></i>Skills</b>
               </p>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">100%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:50%">100%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue"></i>Idiomas</b>
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-blue" style="height:24px;width:100%"></div>
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:40%"></div>
+                <div class="w3-round-xlarge w3-blue" style="height:24px;width:40%"></div>
               </div>
               <br>
             </div>
@@ -73,24 +73,24 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Sobre</h2>
             <p>Mais de 10 anos de experiência em desenvolvimento de aplicações Web utilizando Java, JSF, PrimeFaces, Hibernate, JPA, iReport, dentre outros, e em gerenciamento de banco de dados PostgreSql. Participou do início do desenvolvimento do sistema próprio do Conselho Regional de Engenharia e Agronomia do Estado do Piauí, em 2009, permanecendo na equipe até o momento, fazendo manutenções e desenvolvendo novas funcionalidades.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Experiências
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Conselho Regional de Engenharia e Agronomia do Piauí - CREA/PI</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Outubro 2008 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Outubro 2008 - <span class="w3-tag w3-blue w3-round">Atual</span></h6>
               <p>Analista de Sistemas</p>
               <p>Desenvolvimento de Sistema Web em Java, utilizando os frameworks JSF, PrimeFaces, Hibernate, JPA, iReport, dentre outros; Desenvolvimento de API em PHP para acesso a dados por Aplicativos; Gerenciamento de banco de dados Postgresql.</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Conselho Regional de Engenharia e Agronomia do Piauí - CREA/PI</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2018 - Junho 2021</h6>
+              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2018 - Junho 2021</h6>
               <p>Gerente da Divisão de Informática</p>
               <p>Planejamento, coordenação, execução e controle das atividades de informática e processamento de dados do Conselho.</p>
             </div>
@@ -98,11 +98,11 @@
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro 2023 - <span class="w3-tag w3-blue w3-round">Atual</span></h6>
               <p>
                 A DIO possui parcerias com algumas empresas inovadoras no mundo, proporcionando experiências de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
@@ -114,22 +114,22 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Instituto Federal do Piauí - IFPI</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro 2005 - Dezembro 2007</h6>
+              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Novembro 2005 - Dezembro 2007</h6>
               <p>Pós-graduação Lato Sensu - Especialização em Banco de Dados</p>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Universidade Estadual do Piauí - UESPI</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1999 - 2004</h6>
+              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1999 - 2004</h6>
               <p>Bacharelado em Ciência da Computação</p>
             </div>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-blue">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/thaizepaulo/dio-desafio-projetos-primeiro-repositorio" target="_blank">thaizepaulo/dio-desafio-projetos-primeiro-repositorio</a>
               </h6>
@@ -147,7 +147,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-blue w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/thaizepaulo" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/thaize-paulo/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
