--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
               <p>Repositório para o desafio DIO "Criando seu Primeiro Repositório no GitHub Para Compartilhar Seu Progresso"</p>
               <hr>
             </div>
+            <div class="w3-container">
+              <h6 class="w3-text-blue">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/thaizepaulo/js-developer-pokedex" target="_blank">thaizepaulo/js-developer-pokedex</a>
+              </h6>
+              <p>Repositório para o desafio DIO "Construindo uma Pokédex com JavaScript"</p>
+              <hr>
+            </div>
           </div>
   
           <!-- End Right Column -->
